--- a/thinknoack/_posts/all/2014-01-02-blue-tic.markdown
+++ b/thinknoack/_posts/all/2014-01-02-blue-tic.markdown
@@ -15,4 +15,4 @@ post-img: /post-images/btic/post.jpg
 post-img2: /post-images/btic/post2.jpg
 teaser: Album Covers
 ---
-Fostering scientific collaboration for the benefit of California's natural spaces CALCC is federally-funded conservation collaborative, and they needed a modern, easy-to-update website to better serve their community-based efforts.
+A band in Portland, OR needed an album cover, these two designs were my offerings. Just for the record they chose the second option.  
