adding fix for synapse slug

--- a/thinknoack/_posts/all/2014-04-30-synapse.markdown
+++ b/thinknoack/_posts/all/2014-04-30-synapse.markdown
@@ -15,7 +15,7 @@ tags:
 - wordpress
 - design
 - ux/ui
-permalink: stepping-stones
+permalink: synapse
 teaser-img: /post-images/syn/teaser.jpg
 post-img: /post-images/syn/post.jpg
 teaser: Developing things like the fit bit
