--- a/thinknoack/_posts/all/2014-06-02-wwbb.markdown
+++ b/thinknoack/_posts/all/2014-06-02-wwbb.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-client:  "Personal"
+client:  "Github Repo"
 siteurl: https://github.com/thinknoack/wwbb
 title: WP Backbone 
 className: site
