adding new post

--- a/thinknoack/_posts/all/2014-04-06-qcorp.markdown
+++ b/thinknoack/_posts/all/2014-04-06-qcorp.markdown
@@ -2,7 +2,7 @@
 layout: post
 client:  "Oregpm Health Care Corporation"
 siteurl: http://q-corp.org/
-title: RatherFit 
+title: QCORP 
 className: site
 categories: 
 - all
