--- a/thinknoack/_posts/all/2013-10-01-elmno.markdown
+++ b/thinknoack/_posts/all/2013-10-01-elmno.markdown
@@ -12,6 +12,6 @@ tags:
 permalink: elmnopress
 teaser-img: /post-images/elmno/teaser.jpg
 post-img: /post-images/elmno/post.jpg
-teaser: A t-shirt store design 
+teaser: A store design 
 ---
 A site design for an online store, selling t-shirts and trinkets. 
