--- a/thinknoack/_posts/all/2013-10-02-adm-site.markdown
+++ b/thinknoack/_posts/all/2013-10-02-adm-site.markdown
@@ -16,6 +16,6 @@ tags:
 permalink: adm-site
 teaser-img: /post-images/adm/teaser.jpg
 post-img: /post-images/adm/post.jpg
-teaser: EMR Report Purchase Page 
+teaser: EMR Report Purchasing 
 ---
 A payment gateway using First Data Global Gateway Solutions for Advanced Data Management
