--- a/thinknoack/_posts/all/2014-03-04-epay.markdown
+++ b/thinknoack/_posts/all/2014-03-04-epay.markdown
@@ -15,7 +15,7 @@ tags:
 permalink: electronic-payments
 teaser-img: /post-images/epay/teaser.jpg
 post-img: /post-images/epay/post.jpg
-teaser: Cognitive 
+teaser: Electronic Payments 
 ---
 This site was built on Drupal and offers information on electronic payment. I performed maintenance and developed splash pages for NACHA.
  
