making changes to images

--- a/thinknoack/_posts/all/2014-04-06-qcorp.markdown
+++ b/thinknoack/_posts/all/2014-04-06-qcorp.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-client:  "Oregpm Health Care Corporation"
+client:  "Oregon Health Care Corporation"
 siteurl: http://q-corp.org/
 title: QCORP 
 className: site
