adding new category and pages

--- a/thinknoack/_posts/all/2014-06-02-wwbb.markdown
+++ b/thinknoack/_posts/all/2014-06-02-wwbb.markdown
@@ -3,9 +3,10 @@ layout: post
 client:  "Github Repo"
 siteurl: https://github.com/thinknoack/wwbb
 title: WP Backbone 
-className: site
+className: playground
 categories: 
 - all
+- playground
 - site
 - design
 tags:
