update to post content

--- a/_posts/2014-11-30-synapse.markdown
+++ b/_posts/2014-11-30-synapse.markdown
@@ -17,12 +17,12 @@ tags:
 permalink: synapse/
 teaser-img: /post-images/syn/teaser.jpg
 post-img: /post-images/syn/post.jpg
-teaser-webp: /post-images/post-images/webp/syn/teaser.webp
-post-webp: /post-images/post-images/webp/syn/post.webp
+teaser-webp: /post-images/webp/syn/teaser.webp
+post-webp: /post-images/webp/syn/post.webp
 teaser: From concept to finished product, we provide expertise to companies that value a trusted partner. 
 ---
-Synapse is a full-service product development and consultancy firm that helps world class companies realize innovative product visions. They've been responsible for groundbreaking products from the biggest brands, helping execute down to the finest detail. We fill a complementary role for them by helping make their marketing vision real on the web. 
+Synapse is a full-service product development and consultancy firm that helps world class companies realize innovative product visions. They've been responsible for groundbreaking products from the biggest brands, helping execute down to the finest detail. I had a complementary role by helping make their marketing vision real on the web. 
 
-We've been responsible for their web presence since 2012, when we were called in to build a new Drupal 7 site to show off their potential and expertise. As they have grown, we've worked closely with their marketing department to execute numerous style refreshes and many technical initiatives. This has included incorporating dynamic job listings from third party hiring services, SSO (single-sign-on) for active employees, and standalone landing pages that are used by clients for product pitches. 
+As they have grown, I've worked closely with their marketing department to execute numerous style refreshes and many technical initiatives. 
 
  
