--- a/_posts/2019-02-01-warn-auto.markdown
+++ b/_posts/2019-02-01-warn-auto.markdown
@@ -22,4 +22,4 @@ teaser-webp: /post-images/webp/warn/teaser.webp
 post-webp: /post-images/webp/warn/post.webp
 teaser: Helping establish a brand with a whole lot of traction.
 ---
-The new Drupal 8 site for Warn Automotive, an automotive parts manufacturer, gave us another opportunity to help a new company establish their online presence. The site was built in order to help Warn Automotive better target the OEM market. This is another site that we developed and executed with our marketing partners at HMH Agency who helped ensure that the process was smooth from start to finish. The site is a single page site with subtle animations to draw the user's eye to the visuals and thus keep them engaged with the information on the page. 
+The new Drupal 8 site for Warn Automotive, an automotive parts manufacturer, gave me another opportunity to help a new company establish their online presence. The site was built in order to help Warn Automotive better target the OEM market. This is another site that I developed and executed with the team of at HMH Agency who helped ensure that the process was smooth from start to finish. The site is a single page site with subtle animations to draw the user's eye to the visuals and thus keep them engaged with the information on the page. 
