--- a/_posts/2019-03-02-mulr.markdown
+++ b/_posts/2019-03-02-mulr.markdown
@@ -22,8 +22,8 @@ post-webp: /post-images/webp/mulr/post.webp
 teaser: A new company, a new fleet, and a new website. Lightweight and Ready To Roll
 ---
 
-Creating this site let us seize an opportunity which we always relish - helping a new company build their first website. The company is MUL Railcars, a group company belonging to Mitsubishi UFJ Lease & Finance Company Limited (MUL).
+Creating this site let us seize an opportunity which I always relish - helping a new company build their first website. The company is MUL Railcars, a group company belonging to Mitsubishi UFJ Lease & Finance Company Limited (MUL).
 
-We developed and executed this project based on branding and content from our marketing partners at HMH Agency. Despite an initial plan to build in Drupal, we uncovered specific hosting requirements that rendered this impossible. Thanks to our comprehensive planning phase, we were able to pivot our framework prior to any work being done, saving many hours of unnecessary work. 
+I developed and executed this project based on branding and content from the marketing team at HMH Agency. Despite an initial plan to build in Drupal, specific hosting requirements were uncovered that rendered this impossible. Thanks to this discovery I was able to pivot our framework prior to any work being done, saving many hours of unnecessary work. 
 
-The result is a beautiful static Jekyll site that is light on it's feet and can still be quickly updated in the event of content changes. With media assets served through Amazon CloudFront in order to quickly render to an international audience, we are helping a local company assert itself in the global marketplace. 
+The result is a beautiful static Jekyll site that is light on it's feet and can still be quickly updated in the event of content changes. With media assets served through Amazon CloudFront in order to quickly render to an international audience.
